More rules and graphics

--- a/src/libs/markovjunior/markovjunior/CMakeLists.txt
+++ b/src/libs/markovjunior/markovjunior/CMakeLists.txt
@@ -1,18 +1,23 @@
 set(TARGET_NAME markovjunior)
 
 set(${TARGET_NAME}_HEADERS
+    AllNode.h
     Constants.h
+    Field.h
     Grid.h
     Interpreter.h
     Node.h
     OneNode.h
+    ParallelNode.h
     Rule.h
     RuleNode.h
     SymmetryUtils.h
 )
 
 set(${TARGET_NAME}_SOURCES
+    AllNode.cpp
     Constants.cpp
+    Field.cpp
     Grid.cpp
     Interpreter.cpp
     Node.cpp
@@ -48,16 +53,16 @@ cmc_target_current_include_directory(${TARGET_NAME})
 
 cmc_find_dependencies(FILE CMakeFinds.cmake.in)
 
-#target_compile_options(${TARGET_NAME}
-#    PRIVATE "-O2")
+target_compile_options(${TARGET_NAME}
+    PRIVATE "-O2")
 
-#target_compile_options(${TARGET_NAME}
-#     PRIVATE "-O2" "--save-temps")
+target_compile_options(${TARGET_NAME}
+     PRIVATE "-O2")
 
- target_compile_options(${TARGET_NAME}
-     PRIVATE "-g" "-fsanitize=leak" "-Wall" "-Wextra" "-fsanitize=address" "-fsanitize=undefined")
- target_link_options(${TARGET_NAME}
-     PRIVATE "-fsanitize=address" "-fsanitize=leak" "-fsanitize=undefined")
+ # target_compile_options(${TARGET_NAME}
+ #     PRIVATE "-g" "-fsanitize=leak" "-Wall" "-Wextra" "-fsanitize=address" "-fsanitize=undefined")
+ # target_link_options(${TARGET_NAME}
+ #     PRIVATE "-fsanitize=address" "-fsanitize=leak" "-fsanitize=undefined")
 
 target_link_libraries(${TARGET_NAME}
     PUBLIC
