--- a/src/apps/markov-proto/markov-proto/CMakeLists.txt
+++ b/src/apps/markov-proto/markov-proto/CMakeLists.txt
@@ -11,23 +11,24 @@ add_executable(${TARGET_NAME}
     ${${TARGET_NAME}_SOURCES}
     ${${TARGET_NAME}_HEADERS})
 
-# target_compile_options(${TARGET_NAME}
-#     PRIVATE "-O2")
+target_compile_options(${TARGET_NAME}
+    PRIVATE "-O2")
 
-# target_compile_options(${TARGET_NAME}
-#      PRIVATE "-O2")
+target_compile_options(${TARGET_NAME}
+     PRIVATE "-O2")
 
- target_compile_options(${TARGET_NAME}
-     PRIVATE "-fno-omit-frame-pointer" "-g" "-fsanitize=leak" "-Wall" "-Wextra" "-fsanitize=address" "-fsanitize=undefined")
- target_link_options(${TARGET_NAME}
-     PRIVATE "-fsanitize=address" "-fsanitize=leak" "-fsanitize=undefined")
+ # target_compile_options(${TARGET_NAME}
+ #     PRIVATE "-fno-omit-frame-pointer" "-g" "-fsanitize=leak" "-Wall" "-Wextra" "-fsanitize=address" "-fsanitize=undefined")
+ # target_link_options(${TARGET_NAME}
+ #     PRIVATE "-fsanitize=address" "-fsanitize=leak" "-fsanitize=undefined")
 
-find_package(Graphics REQUIRED CONFIG COMPONENTS graphics)
+find_package(Graphics REQUIRED CONFIG COMPONENTS graphics imguiui)
 
 target_link_libraries(${TARGET_NAME}
     PRIVATE
         ad::markovjunior
         ad::graphics
+        ad::imguiui
 )
 
 set_target_properties(${TARGET_NAME} PROPERTIES
