--- a/src/apps/markov-proto/markov-proto/CMakeLists.txt
+++ b/src/apps/markov-proto/markov-proto/CMakeLists.txt
@@ -11,18 +11,24 @@ add_executable(${TARGET_NAME}
     ${${TARGET_NAME}_SOURCES}
     ${${TARGET_NAME}_HEADERS})
 
-target_compile_options(${TARGET_NAME}
-    PRIVATE "-O2")
+# target_compile_options(${TARGET_NAME}
+#     PRIVATE "-O2")
 
-target_compile_options(${TARGET_NAME}
-     PRIVATE "-O2")
+# target_compile_options(${TARGET_NAME}
+#      PRIVATE "-O2")
 
- # target_compile_options(${TARGET_NAME}
- #     PRIVATE "-fno-omit-frame-pointer" "-g" "-fsanitize=leak" "-Wall" "-Wextra" "-fsanitize=address" "-fsanitize=undefined")
- # target_link_options(${TARGET_NAME}
- #     PRIVATE "-fsanitize=address" "-fsanitize=leak" "-fsanitize=undefined")
+ target_compile_options(${TARGET_NAME}
+     PRIVATE "-fno-omit-frame-pointer" "-g" "-fsanitize=leak" "-Wall" "-Wextra" "-fsanitize=address" "-fsanitize=undefined")
+ target_link_options(${TARGET_NAME}
+     PRIVATE "-fsanitize=address" "-fsanitize=leak" "-fsanitize=undefined")
 
 find_package(Graphics REQUIRED CONFIG COMPONENTS graphics imguiui)
+
+add_custom_command(
+    TARGET ${TARGET_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${PROJECT_SOURCE_DIR}/assets/
+    ${CMAKE_CURRENT_BINARY_DIR}/assets)
 
 target_link_libraries(${TARGET_NAME}
     PRIVATE
