--- a/src/libs/markovjunior/markovjunior/CMakeLists.txt
+++ b/src/libs/markovjunior/markovjunior/CMakeLists.txt
@@ -71,16 +71,16 @@ cmc_target_current_include_directory(${TARGET_NAME})
 
 cmc_find_dependencies(FILE CMakeFinds.cmake.in)
 
-target_compile_options(${TARGET_NAME}
-    PRIVATE "-O2")
+# target_compile_options(${TARGET_NAME}
+#     PRIVATE "-O2")
 
-target_compile_options(${TARGET_NAME}
-     PRIVATE "-O2")
+# target_compile_options(${TARGET_NAME}
+#      PRIVATE "-O2")
 
- # target_compile_options(${TARGET_NAME}
- #     PRIVATE "-g" "-fsanitize=leak" "-Wall" "-Wextra" "-fsanitize=address" "-fsanitize=undefined")
- # target_link_options(${TARGET_NAME}
- #     PRIVATE "-fsanitize=address" "-fsanitize=leak" "-fsanitize=undefined")
+ target_compile_options(${TARGET_NAME}
+     PRIVATE "-g" "-fsanitize=leak" "-Wall" "-Wextra" "-fsanitize=address" "-fsanitize=undefined")
+ target_link_options(${TARGET_NAME}
+     PRIVATE "-fsanitize=address" "-fsanitize=leak" "-fsanitize=undefined")
 
 target_link_libraries(${TARGET_NAME}
     PUBLIC
