update CMakeLists for new cmake submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,7 @@ include(cmc-install)
 cmc_install_root_component_config(${PROJECT_NAME})
 cmc_register_source_package(${PROJECT_NAME})
 
+include(cmc-cpp)
+cmc_cpp_define_sanitizer_enum()
+
 add_subdirectory(src)
