update workflows and shred conan base

--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -4,10 +4,11 @@ on:
   push:
     branches:
       - develop
+      - master
 
 jobs:
   build-test-deployrecipe:
-    uses: shredeagle/reusable-workflows/.github/workflows/main_build.yml@v2.0.1
+    uses: shredeagle/reusable-workflows/.github/workflows/main_build.yml@v2.4.1
     with:
       # Disable macOS
       # apple-clang 13 is being a little itch with deduction guides for template aliases.
