build proto only with build tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,5 @@ add_subdirectory(libs/markovjunior/markovjunior)
 
 option(BUILD_tests "Build the test applications" ON)
 if(BUILD_tests)
+    add_subdirectory(apps/markov-proto/markov-proto)
 endif()
