--- a/.github/workflows/develop-build_test_deploy.yml
+++ b/.github/workflows/develop-build_test_deploy.yml
@@ -13,6 +13,7 @@ jobs:
       os: >-
         ["ubuntu-22.04", "windows-2022"]
       deployrecipe_userchannel: adnn/develop
+      step_runtests: false
     secrets:
       SHREDROBOT_GITHUB_TOKEN: ${{ secrets.SHREDROBOT_GITHUB_TOKEN }}
       ACTION_CACHENAME: ${{ secrets.ACTION_CACHENAME }}
