--- a/.github/workflows/versiontag-build_test_deploy.yml
+++ b/.github/workflows/versiontag-build_test_deploy.yml
@@ -17,6 +17,7 @@ jobs:
         ["ubuntu-22.04", "windows-2022"]
       deployrecipe_userchannel: adnn/stable
       version: ${{ needs.extract_tag.outputs.version }}
+      step_runtests: false
     secrets:
       SHREDROBOT_GITHUB_TOKEN: ${{ secrets.SHREDROBOT_GITHUB_TOKEN }}
       ACTION_CACHENAME: ${{ secrets.ACTION_CACHENAME }}
