--- a/conan/workspaces/markov_ws.yml
+++ b/conan/workspaces/markov_ws.yml
@@ -1,6 +1,8 @@
 editables:
   graphics/cff6cd4822@adnn/develop:
     path: ../../../graphics/conan
+  math/18338feb20@adnn/develop:
+    path: ../../../math/conan
   MarkovJunior.cpp/local:
     path: ../../conan
 layout: linux_layout
